# qReader

lib/dao/: CMakeLists.txt  dao.cpp  dao.hpp  ormpp_cfg.hpp  userInfo.cpp  userInfo.h  userInfo.hpp  utility.hpp
lib/dao/cfg/: ormpp.cfg
protobuf/bookcity/: bookcity.proto
protobuf/bookinfo/: .bookinfo.proto.swp  bookinfo.proto
protobuf/collectdata/: collectdata.proto
protobuf/common/: common.proto
protobuf/recommend/: recommend.proto
protobuf/userinfo/: userinfo.proto
storesService/: CMakeLists.txt  server.cpp  server.h
userService/: .userinfo.proto.swp  CMakeLists.txt  client.cpp  data.hpp  server.cpp  server.h
